# rust-test-frameworks

./: README.md
examples/simple/: build.sh  lib.rs  simple_framework.rs
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
integration_tests/tests/: integration_tests.rs
lib_test2/: Cargo.toml  lib.rs
lib_test2/example/: Cargo.toml
lib_test2/example/src/: main.rs
lib_test2/libtest2_macro/: Cargo.toml
lib_test2/libtest2_macro/src/: lib.rs
multiprocess_runner/: Cargo.toml  output.txt
multiprocess_runner/src/: lib.rs
simple/: Cargo.toml
simple/src/: lib.rs
test_macro/: .gitignore  Cargo.toml
test_macro/libtest_macro/: Cargo.toml
test_macro/libtest_macro/src/: lib.rs
test_macro/src/: main.rs
